change icon and app name

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">movieapp</string>
+    <string name="app_name">The Movie</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">raNvWttVTcm1V-hRLhODv5xmQfBlTUDT6-LLU</string>
 </resources>
